<resources>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="app_name">JobSeeker</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="intern">Intern</string>
    <string name="job">Job</string>

    <string name="innerwork">InnerWork</string>
    <string name="job_details">Job Details</string>
    <string name="job_title">Digital Marketing</string>
    <string name="company_name">InnerWork Solutions</string>
    <string name="jobtype_Field">Internship</string>
    <string name="Stipend_type">Unpaid</string>
    <string name="Candidate_type">MBA Fresher</string>
    <string name="posted_on_time">Posted on 2020-07-10 10:42:25</string>
    <string name="details_heading">Details</string>
    <string name="about_company">About Company :</string>
    <string name="Contact_name">Sheela Jha :</string>
    <string name="contact_phone_number">1234567899</string>
    <string name="company_email">internship@innerworkindia.com</string>
    <string name="internship_description">Internship Description :</string>
    <string name="internship_full_description">Innerwork provides full-range human resources and IT solutions to help businesses improve hiring and digital infrastructure for the effective functioning of the company. Founded with a purpose to find the right balance of quality hiring and smooth on-boar</string>
    <string name="eduRequirement_heading">Education Requirements :</string>
    <string name="edu_requirement_description">MBA Fresher</string>
    <string name="skills_required_heading">Skills Required :</string>
    <string name="java_etc">JAVA, ETC</string>
    <string name="stipend">Stipend :</string>
    <string name="apply_online">Apply Online</string>
    <string name="personal_information_label">Personal Information</string>
    <string name="name_of_the_candidate">NAME OF THE CANDIDATE</string>
    <string name="email1">EMAIL</string>
    <string name="mobile_number">MOBILE NUMBER</string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>
    <string name="other">OTHER</string>
    <string name="career_information_label">Career Information</string>
    <string name="qualification_label">QUALIFICATION</string>
    <string name="enter_skills_label">ENTER SKILLS</string>
    <string name="enter_interests_label">ENTER INTERESTS</string>
    <string name="upload_resume">UPLOAD RESUME</string>
    <string name="apply">Apply</string>
    <string name="update">Update</string>
    <string name="upload_resume_1">Upload Resume</string>

    <string-array name="experience_spinnerArray">
        <item>0–1 Year</item>
        <item>1–2 Year</item>
        <item>2–3 Year</item>
        <item>3–4 Year</item>
        <item>4–5 Year</item>
        <item>Others Year</item>
    </string-array>

</resources>