<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    tools:context=".Details">

    <Button
        android:id="@+id/button_applyonline"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:background="@color/yellow"
        android:text="@string/apply_online"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        >
        <TextView
            android:id="@+id/textview_innerwork"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/innerwork"
            android:textSize="30sp"
            android:gravity="center"
            android:textColor="@color/text_black"
            android:background="@color/yellow"
            />
        <TextView
            android:id="@+id/textview_jobdetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/job_details"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_marginTop="12dp"
            android:textColor="#ECBF18"
            android:background="@color/text_black"
            />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_marginTop="150dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/yellow"
                >

                <TextView
                    android:id="@+id/textview_jobHeading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/jobtitle_size"
                    android:text="@string/job_title"
                    android:textColor="@color/text_black"
                    android:padding="10dp"
                    />
                <TextView
                    android:id="@+id/textview_companyname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/description_size"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:text="@string/company_name"
                    android:padding="10dp"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    >
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/ic_suitecase"
                        android:layout_marginEnd="20dp"
                        />
                    <TextView
                        android:id="@+id/textview_jobtype"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="@dimen/company_name_size"
                        android:text="@string/jobtype_Field"
                        android:textColor="@color/text_black"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    >
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/ic_indian_rupee_symbol"
                        android:layout_marginEnd="20dp"
                        />
                    <TextView
                        android:id="@+id/textview_stipendType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:text="@string/Stipend_type"
                        android:textSize="@dimen/company_name_size"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    >
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/ic_minduka_business_man"
                        android:layout_marginEnd="20dp"
                        />
                    <TextView
                        android:id="@+id/textview_candidateType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="#000000"
                        android:text="@string/Candidate_type"
                        android:textSize="@dimen/company_name_size"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    >
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/ic_calendaer"
                        android:layout_marginEnd="20dp"
                        />
                    <TextView
                        android:id="@+id/textview_datePosted"
                        android:layout_width="match_parent"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:layout_height="wrap_content"
                        android:text="@string/posted_on_time"
                        android:textSize="@dimen/company_name_size"
                        />
                </LinearLayout>

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40sp"
                    android:background="@drawable/ic_share"
                    android:layout_marginStart="50dp"
                    />
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details_heading"
                android:textSize="@dimen/jobtitle_size"
                android:layout_marginTop="30dp"
                android:textColor="#20404A"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_company"
                android:textSize="@dimen/subheading_size"
                android:layout_marginTop="10dp"
                android:textColor="@color/text_black"
                />
            <TextView
                android:id="@+id/textview_aboutCompanyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/company_name"
                android:textColor="#000000"
                android:textSize="@dimen/description_size"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:id="@+id/textview_contactName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Contact_name"
                android:textSize="@dimen/subheading_size"
                android:layout_marginTop="10dp"
                android:textColor="@color/text_black"
                />
            <TextView
                android:id="@+id/textview_contactPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_phone_number"
                android:textSize="@dimen/subheading_size"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:id="@+id/textview_companyEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/company_email"
                android:textSize="@dimen/subheading_size"
                android:textColor="#4081FF"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:id="@+id/textview_jobDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/internship_description"
                android:textSize="@dimen/subheading_size"
                android:layout_marginTop="10dp"
                android:textColor="@color/text_black"
                />
            <TextView
                android:id="@+id/textview_jobDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/internship_full_description"
                android:textSize="@dimen/description_size"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:id="@+id/textview_eduRequirements"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eduRequirement_heading"
                android:textSize="@dimen/subheading_size"
                android:layout_marginTop="10dp"
                android:textColor="@color/text_black"
                />
            <TextView
                android:id="@+id/textview_eduRequirementDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edu_requirement_description"
                android:textSize="@dimen/description_size"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:id="@+id/textview_skillsReq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/skills_required_heading"
                android:textSize="@dimen/subheading_size"
                android:layout_marginTop="10dp"
                android:textColor="@color/text_black"
                />
            <TextView
                android:id="@+id/textview_skillReqDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/java_etc"
                android:textSize="@dimen/description_size"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:id="@+id/textview_stipend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stipend"
                android:textSize="@dimen/subheading_size"
                android:layout_marginTop="10dp"
                android:textColor="@color/text_black"
                />
            <TextView
                android:id="@+id/textview_stipendamt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Amount"
                android:textSize="@dimen/description_size"
                android:layout_marginTop="10dp"
                android:textColor="@color/text_black"
                />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>