<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    tools:context=".Apply">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBar6"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/yellow1"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button_upload"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="35dp"
        android:text="@string/apply"
        android:textSize="@dimen/subheading_size"
        android:background="@color/text_black"
        android:textColor="@color/white"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/textview_innerwork"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/innerwork"
            android:textSize="30sp"
            android:gravity="center"
            android:textColor="@color/text_black"
            android:background="@color/yellow"
            />
        <TextView
            android:id="@+id/textview_jobdetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/job_details"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_marginTop="12dp"
            android:textColor="#ECBF18"
            android:background="@color/text_black"
            />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/textview_jobHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/job_title"
                android:textSize="@dimen/jobtitle_size"
                android:textColor="@color/text_black"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/textview_CompanyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/company_name"
                android:textSize="@dimen/company_name_size"
                android:gravity="center"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:background="@color/yellow"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/personal_information_label"
                    android:textSize="@dimen/jobtitle_size"
                    android:textColor="@color/text_black"
                    android:gravity="center"
                    />
                <EditText
                    android:id="@+id/edittext_candidateName"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/white"
                    android:hint="@string/name_of_the_candidate"
                    android:gravity="center"
                    android:layout_margin="5dp"
                    android:layout_marginTop="10dp"
                    />
                <EditText
                    android:id="@+id/edittext_candidateEmail"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/white"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:gravity="center"
                    android:layout_margin="5dp"
                    android:layout_marginTop="10dp"
                    />
                <RadioGroup
                    android:id="@+id/radiogroup_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    >
                    <RadioButton
                        android:id="@+id/male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        android:layout_marginLeft="10dp"

                        />
                    <RadioButton
                        android:id="@+id/female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"
                        android:layout_marginLeft="10dp"
                        />
                    <RadioButton
                        android:id="@+id/others"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/other"
                        android:layout_marginLeft="10dp"
                        />
                </RadioGroup>
                <EditText
                    android:id="@+id/edittext_candidatePhone"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/white"
                    android:hint="@string/mobile_number"
                    android:inputType="phone"
                    android:gravity="center"
                    android:maxLength="10"
                    android:layout_margin="5dp"
                    android:layout_marginTop="10dp"
                    />
                <EditText
                    android:id="@+id/edittext_candidateQualification"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/white"
                    android:hint="@string/qualification_label"
                    android:gravity="center"
                    android:layout_margin="5dp"
                    android:layout_marginTop="10dp"
                    />
                <EditText
                    android:id="@+id/edittext_candidateCity"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/white"
                    android:hint="City"
                    android:gravity="center"
                    android:layout_margin="5dp"
                    android:layout_marginTop="10dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:background="@color/yellow">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/career_information_label"
                    android:textSize="@dimen/jobtitle_size"
                    android:textColor="@color/text_black"
                    android:gravity="center"
                    />
                <Spinner
                    android:id="@+id/spinner_experience"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="30dp"
                    android:gravity="center"
                    />
                <EditText
                    android:id="@+id/edittext_skills"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/white"
                    android:hint="@string/enter_skills_label"
                    android:gravity="center"
                    android:layout_margin="5dp"
                    android:layout_marginTop="10dp"
                    />
                <EditText
                    android:id="@+id/edittext_interests"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/white"
                    android:hint="@string/enter_interests_label"
                    android:gravity="center"
                    android:layout_margin="5dp"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>